--- a/angular/src/app/main/checklist/task-details/task-details.component.css
+++ b/angular/src/app/main/checklist/task-details/task-details.component.css
@@ -153,6 +153,108 @@
 }
 
 
+
+
+    .span{
+			display: inline-block;
+		}
+		.small-btn{
+			padding: 0px 
+		}
+		.small-btn{
+			border-radius: 4px;
+			padding: 2px 10px;
+		}
+		.activity-inner-a{
+			min-width: 50px;
+		}
+		.activity-inner-b{
+			flex: auto;
+		}
+		.activity-inner-b .notification-line1 span{
+			font-weight: bold;
+		}
+		.badge2{
+			width:40px;
+			height: 40px;
+			margin-right: 10px;
+            border-radius: 50%;
+            color: white;
+		}
+
+		/*Pre used classes*/
+		.bg-lightgrey{
+			background-color: #f1f2fc!important;
+		}
+		.text-lightgrey{
+			color:  #aab1bd !important;
+		}
+
+		/*BS Classes*/
+		.mr-2{
+			margin-right: 8px;
+		}
+		.ml-2{
+			margin-left: 8px;
+		}
+		.mb-2{
+			margin-bottom: 8px;
+		}
+		.mb-3{
+			margin-bottom: 16px;
+		}
+		.mb-4{
+			margin-bottom: 24px;
+		}
+		.d-flex{
+			display: flex;
+		}
+		.d-inline-flex{
+			display: inline-flex;
+		}
+		.flex-wrap{
+			flex-wrap: wrap;
+		}
+		.justify-content-center{
+			justify-content: center;
+		}
+		.align-items-center{
+			align-items: center;
+		}
+
+
+
+        .border-grey{
+            border:1px solid #EBEDF2;
+        }
+        .bg-lightgrey{
+            background-color: #F1F2FC !important;
+        }
+        .bg-purple{
+            background-color: #716ACA !important;
+        }
+        .bg-golden{
+            background-color: #FFB822 !important;
+        }
+        .bg-sea-green{
+            background-color: #0ABB87 !important;
+        }
+        .bg-brown{
+            background-color: #ac7339 !important;
+        }
+        .bg-blue{
+            background-color: #3F94FD !important;
+        }
+        .bg-magenta{
+            background-color: #993399 !important;
+        }
+        .bg-gray{
+            background-color: #8A8A8A !important;
+        }
+
+
+
+
 /* .drop_down_arrow {
     margin-left: 135px;
 } */
